--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ edition = "2021"
 futures = "0.3.25"
 async-std = "1.12.0"
 protobuf = "3.2.0"
+chrono = "0.4.23"
+rand = "0.8.5"
+rand_xoshiro = "0.6.0"
