--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,11 @@ edition = "2021"
 
 [dependencies]
 futures = "0.3.25"
-async-std = "1.12.0"
+async-std = { version = "1.12.0", features = [ "attributes" ] }
 protobuf = "3.2.0"
 chrono = "0.4.23"
 rand = "0.8.5"
 rand_xoshiro = "0.6.0"
+sqlx = { version = "0.6", features = [ "runtime-async-std-native-tls", "sqlite" ] }
+clap = { version = "4.1.4", features = ["derive"] }
+
