--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,6 @@ rand = "0.8.5"
 rand_xoshiro = "0.6.0"
 sqlx = { version = "0.6", features = [ "runtime-async-std-native-tls", "sqlite" ] }
 clap = { version = "4.1.4", features = ["derive"] }
+log = "0.4.17"
+simple_logger = "4.0.0"
 
